--- a/src/index.html
+++ b/src/index.html
@@ -212,39 +212,41 @@
 
     <section class="contacts">
       <div class="contacts__inner">
-        <div class="contacts__tabs  js-contacts-tabs">
+        <div class="contacts__info">
           <h2 class="section-title  contacts__title">Контакты</h2>
-          <ul class="contacts__tabs-list">
-            <li class="contacts__tabs-item">
-              <a href="#contacts-tab-1" class="contacts__tabs-link  js-contacts-tab" data-lat="59.950195"
-                 data-lng="30.294754">
-                Петербург
-              </a>
-            </li>
-            <li class="contacts__tabs-item">
-              <a href="#contacts-tab-2" class="contacts__tabs-link  js-contacts-tab" data-lat="55.737482"
-                 data-lng="37.636704">
-                Москва
-              </a>
-            </li>
-          </ul>
+          <div class="contacts__tabs  js-contacts-tabs">
+            <ul class="contacts__tabs-list">
+              <li class="contacts__tabs-item">
+                <a href="#contacts-tab-1" class="contacts__tabs-link  js-contacts-tab" data-lat="59.950195"
+                   data-lng="30.294754">
+                  Петербург
+                </a>
+              </li>
+              <li class="contacts__tabs-item">
+                <a href="#contacts-tab-2" class="contacts__tabs-link  js-contacts-tab" data-lat="55.737482"
+                   data-lng="37.636704">
+                  Москва
+                </a>
+              </li>
+            </ul>
 
-          <div class="contacts__tab-content" id="contacts-tab-1">
-            <div class="contacts__address">
-              м. Спортивная,<br>
-              пр. Добролюбова, д. 16, корп.2, лит. А
+            <div class="contacts__tab-content" id="contacts-tab-1">
+              <div class="contacts__address">
+                м. Спортивная,<br>
+                пр. Добролюбова, д. 16, корп.2, лит. А
+              </div>
+              <a href="mailto:spb@realweb.ru" class="contacts__email">spb@realweb.ru</a>
+              <a href="tel:+78122440880" class="contacts__phone">+7 (812) 244-08-80</a>
             </div>
-            <a href="mailto:spb@realweb.ru" class="contacts__email">spb@realweb.ru</a>
-            <a href="tel:+78122440880" class="contacts__phone">+7 (812) 244-08-80</a>
-          </div>
 
-          <div class="contacts__tab-content" id="contacts-tab-2">
-            <div class="contacts__address">
-              м. Павелецкая, м. Третьяковская,<br>
-              ул. Большая Татарская, д. 35, стр. 7-9
+            <div class="contacts__tab-content" id="contacts-tab-2">
+              <div class="contacts__address">
+                м. Павелецкая, м. Третьяковская,<br>
+                ул. Большая Татарская, д. 35, стр. 7-9
+              </div>
+              <a href="mailto:msk@realweb.ru" class="contacts__email">msk@realweb.ru</a>
+              <a href="tel:+74952290161 " class="contacts__phone">+7 (495) 229–01–61 </a>
             </div>
-            <a href="mailto:msk@realweb.ru" class="contacts__email">msk@realweb.ru</a>
-            <a href="tel:+74952290161 " class="contacts__phone">+7 (495) 229–01–61 </a>
           </div>
         </div>
       </div>
