Add english version, minified imgs

--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,9 @@
   <header class="page-header">
     <div class="page-header__inner">
       <div class="logo">
-        <picture>
-          <source media="(min-width: 1230px)" srcset="img/doubleclick-logo.svg">
-          <img src="img/doubleclick-logo--mobile.svg" alt="Логотип Doubleclick">
-        </picture>
+        <img src="img/doubleclick-logo.svg" alt="Логотип Doubleclick">
       </div>
-      <a href="#" class="language-switch">En</a>
+      <a href="index-en.html" class="language-switch">En</a>
       <a href="#" class="main-nav-toggler js-main-nav-toggler"><span></span></a>
       <nav class="main-nav js-main-nav">
         <ul class="main-nav__list">
@@ -299,6 +296,7 @@
                 <li class="dotted-list__item">Дополнительное обучение</li>
                 <li class="dotted-list__item">Консультации по&nbsp;сертификации</li>
                 <li class="dotted-list__item">Видеозвонки</li>
+                <li class="dotted-list__item">Техническая поддержка</li>
               </ul>
             </div>
           </div>
