Change validation error messages, fix for mistakes in content

--- a/src/index-en.html
+++ b/src/index-en.html
@@ -96,7 +96,7 @@
                 <li class="features-list__item">Devices / Browsers</li>
                 <li class="features-list__item">Dynamic remarketing</li>
                 <li class="features-list__item">Formats: banner, in-banner, in-stream, rich-media</li>
-                <li class="features-list__item">Защита от фрода</li>
+                <li class="features-list__item">Fraud protection</li>
                 <li class="features-list__item">Visibility</li>
                 <li class="features-list__item">Brand protection</li>
                 <li class="features-list__item">Automatic optimization</li>
@@ -161,6 +161,37 @@
 
         </div>
         <div class="products__tabs-content" id="products-tab-3">
+          <div class="products__features">
+            <div class="products__features-item">
+              <svg class="products__features-img">
+                <use xlink:href="#icon-lib"></use>
+              </svg>
+              <div class="products__features-title">Materials Library</div>
+              <p>Hosting of&nbsp;all creative materials in&nbsp;one place</p>
+            </div>
+            <div class="products__features-item">
+              <svg class="products__features-img">
+                <use xlink:href="#icon-rocket"></use>
+              </svg>
+              <div class="products__features-title">
+                Dynamic Creative
+              </div>
+              <p>
+                Full control and flexible management of&nbsp;dynamic creatives
+              </p>
+            </div>
+            <div class="products__features-item">
+              <svg class="products__features-img">
+                <use xlink:href="#icon-measures"></use>
+              </svg>
+              <div class="products__features-title">Quality Control</div>
+              <p>
+                Quality Assurance&nbsp;&mdash; technical inspection and search for bugs in&nbsp;creatives
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="products__tabs-content" id="products-tab-4">
           <p class="products__descr">
             Single platform for search advertising management in&nbsp;different search systems. Add-in to&nbsp;search
             systems providing general statistics, search campaign management and optimization.
@@ -200,37 +231,6 @@
             </div>
           </div>
         </div>
-        <div class="products__tabs-content" id="products-tab-4">
-          <div class="products__features">
-            <div class="products__features-item">
-              <svg class="products__features-img">
-                <use xlink:href="#icon-lib"></use>
-              </svg>
-              <div class="products__features-title">Materials Library</div>
-              <p>Hosting of&nbsp;all creative materials in&nbsp;one place</p>
-            </div>
-            <div class="products__features-item">
-              <svg class="products__features-img">
-                <use xlink:href="#icon-rocket"></use>
-              </svg>
-              <div class="products__features-title">
-                Dynamic Creative
-              </div>
-              <p>
-                Full control and flexible management of&nbsp;dynamic creatives
-              </p>
-            </div>
-            <div class="products__features-item">
-              <svg class="products__features-img">
-                <use xlink:href="#icon-measures"></use>
-              </svg>
-              <div class="products__features-title">Quality Control</div>
-              <p>
-                Quality Assurance&nbsp;&mdash; technical inspection and search for bugs in&nbsp;creatives
-              </p>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </section>
@@ -242,7 +242,7 @@
         <div class="statistics__items">
           <div class="statistics__item">
             <div class="statistics__numbers"><span>>4</span> years of&nbsp;expertise</div>
-            <div class="statistics__text">in&nbsp;Programmatic Buying</div>
+            <div class="statistics__text">in&nbsp;programmatic buying</div>
           </div>
           <div class="statistics__item">
             <div class="statistics__numbers"><span>№1</span> official reseller</div>
