--- a/src/index.html
+++ b/src/index.html
@@ -96,12 +96,12 @@
                   <li class="features-list__item">Форматы: баннер, inn-banner, in-stream, rich-media</li>
                   <li class="features-list__item">Защита от фрода</li>
                   <li class="features-list__item">Видимость</li>
-                  <li class="features-list__item">Задита бренда</li>
+                  <li class="features-list__item">Защита бренда</li>
                 </ul>
               </div>
             </div>
             <div class="statistics">
-              <h3 class="statistics__title">Медиа-инвентарь в мире</h3>
+              <h3 class="statistics__title">Медиаинвентарь в мире</h3>
               <div class="statistics__items">
                 <div class="statistics__item">
                   <div class="statistics__numbers"><span>>450</span> миллиардов</div>
@@ -148,7 +148,7 @@
                   <ul class="features-list">
                     <li class="features-list__item">Показы, клики, конверсии, стоимость</li>
                     <li class="features-list__item">Охват</li>
-                    <li class="features-list__item">Видимость и&nbsp;Верификация</li>
+                    <li class="features-list__item">Видимость и&nbsp;верификация</li>
                     <li class="features-list__item">Атрибуция</li>
                     <li class="features-list__item">Лог-файлы Data Transfer</li>
                   </ul>
@@ -158,6 +158,31 @@
 
           </div>
           <div class="products__tabs-content" id="products-tab-3">
+            <div class="products__features">
+              <div class="products__features-item">
+                <svg class="products__features-img"><use xlink:href="#icon-lib"></use></svg>
+                <div class="products__features-title">Библиотека материалов</div>
+                <p>Хостинг всех креативных материалов в&nbsp;одном месте</p>
+              </div>
+              <div class="products__features-item">
+                <svg class="products__features-img"><use xlink:href="#icon-rocket"></use></svg>
+                <div class="products__features-title">
+                  Динамический креатив
+                </div>
+                <p>
+                  Полный контроль и&nbsp;гибкое управление динамическими креативами
+                </p>
+              </div>
+              <div class="products__features-item">
+                <svg class="products__features-img"><use xlink:href="#icon-measures"></use></svg>
+                <div class="products__features-title">Quality Control</div>
+                <p>
+                  Quality Assurance&nbsp;&mdash; техническая проверка и&nbsp;поиск багов в&nbsp;креативах
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="products__tabs-content" id="products-tab-4">
             <p class="products__descr">
               Единая платформа для управления поисковой рекламой в&nbsp;разных поисковых системах. Надстройка над
               поисковыми системами для получения общей статистики, управления и&nbsp;оптимизации поисковыми кампаниями
@@ -195,31 +220,6 @@
                     </li>
                   </ul>
                 </div>
-              </div>
-            </div>
-          </div>
-          <div class="products__tabs-content" id="products-tab-4">
-            <div class="products__features">
-              <div class="products__features-item">
-                <svg class="products__features-img"><use xlink:href="#icon-lib"></use></svg>
-                <div class="products__features-title">Библиотека материалов</div>
-                <p>Хостинг всех креативных материалов в&nbsp;одном месте</p>
-              </div>
-              <div class="products__features-item">
-                <svg class="products__features-img"><use xlink:href="#icon-rocket"></use></svg>
-                <div class="products__features-title">
-                  Динамический креатив
-                </div>
-                <p>
-                  Полный контроль и&nbsp;гибкое управление динамическими креативами
-                </p>
-              </div>
-              <div class="products__features-item">
-                <svg class="products__features-img"><use xlink:href="#icon-measures"></use></svg>
-                <div class="products__features-title">Quality Control</div>
-                <p>
-                  Quality Assurance&nbsp;&mdash; техническая проверка и&nbsp;поиск багов в&nbsp;креативах
-                </p>
               </div>
             </div>
           </div>
