Add success message

--- a/src/index.html
+++ b/src/index.html
@@ -327,6 +327,14 @@
           <input type="submit" class="btn  btn--submit" value="Отправить">
         </form>
       </div>
+      <div class="success-message">
+        <div class="success-message__inner">
+          <span class="success-message__close">x</span>
+          <svg class="success-message__img"><use xlink:href="#icon-smile"></use></svg>
+          <div class="success-message__title">Спасибо!</div>
+          <p>Заявка отправлена. В&nbsp;ближайшее время наш менеджер свяжется с&nbsp;вами.</p>
+        </div>
+      </div>
     </section>
 
     <section class="contacts">
