Add success message for english template

--- a/src/index-en.html
+++ b/src/index-en.html
@@ -324,7 +324,7 @@
     </div>
   </section>
 
-  <section class="callback" id="callback">
+  <section class="callback">
     <div class="callback__inner">
       <div class="callback__text">
         <h2 class="section-title  section-title--white  callback__title">Send Request</h2>
@@ -346,6 +346,14 @@
                placeholder="E-mail">
         <input type="submit" class="btn  btn--submit" value="Send">
       </form>
+    </div>
+    <div class="success-message">
+      <div class="success-message__inner">
+        <span class="success-message__close">x</span>
+        <svg class="success-message__img"><use xlink:href="#icon-smile"></use></svg>
+        <div class="success-message__title">Thank you!</div>
+        <p>Your message has been successfully sent. We&nbsp;will contact you very soon!</p>
+      </div>
     </div>
   </section>
 
