--- a/src/index.html
+++ b/src/index.html
@@ -304,7 +304,7 @@
       </div>
     </section>
 
-    <section class="callback" id="callback">
+    <section class="callback">
       <div class="callback__inner">
         <div class="callback__text">
           <h2 class="section-title  section-title--white  callback__title">Оставить заявку</h2>
