--- a/src/index-en.html
+++ b/src/index-en.html
@@ -302,7 +302,8 @@
           </svg>
           <div class="partnership__text">
             <h3 class="partnership__subtitle">Access to&nbsp;DoubleClick Bid Manager</h3>
-            <p>Access to&nbsp;comprehensive possibilities of&nbsp;the platform: a&nbsp;variety of&nbsp;targeting, formats and channels</p>
+            <p>Access to&nbsp;comprehensive possibilities of&nbsp;the platform: a&nbsp;variety of&nbsp;targeting,
+              formats and channels</p>
           </div>
         </div>
         <div class="partnership__item  partnership__item--consult">
@@ -339,7 +340,8 @@
         </p>
       </div>
       <form class="callback-form  js-callback-form">
-        <input type="text" class="field-text callback-form__text-field" name="fullname" placeholder="Please introduce yourself">
+        <input type="text" class="field-text callback-form__text-field" name="fullname"
+               placeholder="Please introduce yourself">
         <input type="tel" class="field-text callback-form__text-field  js-field-phone validation-group" name="phone"
                placeholder="Telephone">
         <input type="email" class="field-text callback-form__text-field  validation-group" name="email"
@@ -350,7 +352,9 @@
     <div class="success-message">
       <div class="success-message__inner">
         <span class="success-message__close">x</span>
-        <svg class="success-message__img"><use xlink:href="#icon-smile"></use></svg>
+        <svg class="success-message__img">
+          <use xlink:href="#icon-smile"></use>
+        </svg>
         <div class="success-message__title">Thank you!</div>
         <p>Your message has been successfully sent. We&nbsp;will contact you very soon!</p>
       </div>
