Change reg ex for phone validation

--- a/src/index-en.html
+++ b/src/index-en.html
@@ -342,9 +342,9 @@
       <form class="callback-form  js-callback-form">
         <input type="text" class="field-text callback-form__text-field" name="fullname"
                placeholder="Please introduce yourself">
-        <input type="tel" class="field-text callback-form__text-field  js-field-phone validation-group" name="phone"
+        <input type="tel" class="field-text callback-form__text-field  js-field-phone" name="phone"
                placeholder="Telephone">
-        <input type="email" class="field-text callback-form__text-field  validation-group" name="email"
+        <input type="email" class="field-text callback-form__text-field" name="email"
                placeholder="E-mail">
         <input type="submit" class="btn  btn--submit" value="Send">
       </form>
