--- a/src/index.html
+++ b/src/index.html
@@ -242,7 +242,7 @@
         <div class="statistics__items">
           <div class="statistics__item">
             <div class="statistics__numbers"><span>>4</span> лет экспертизы</div>
-            <div class="statistics__text">в&nbsp;Programmatic Buying</div>
+            <div class="statistics__text">в&nbsp;programmatic buying</div>
           </div>
           <div class="statistics__item">
             <div class="statistics__numbers"><span>№1</span> в России</div>
@@ -250,7 +250,7 @@
           </div>
           <div class="statistics__item">
             <div class="statistics__numbers"><span>>8,2</span> миллиардов</div>
-            <div class="statistics__text">открученных показов по&nbsp;Programmatic</div>
+            <div class="statistics__text">открученных показов по&nbsp;programmatic</div>
           </div>
         </div>
       </div>
@@ -340,9 +340,9 @@
       </div>
       <form class="callback-form  js-callback-form">
         <input type="text" class="field-text callback-form__text-field" name="fullname" placeholder="Представьтесь">
-        <input type="tel" class="field-text callback-form__text-field  js-field-phone validation-group" name="phone"
+        <input type="tel" class="field-text callback-form__text-field  js-field-phone" name="phone"
                placeholder="Телефон">
-        <input type="email" class="field-text callback-form__text-field  validation-group" name="email"
+        <input type="email" class="field-text callback-form__text-field" name="email"
                placeholder="Эл. почта">
         <input type="submit" class="btn  btn--submit" value="Отправить">
       </form>
